plugins {
    id 'java'
    id 'war'
}

group 'bjs.zangbu'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    // Spring Framework (6.x)
    implementation "org.springframework:spring-context:6.2.8"
    implementation "org.springframework:spring-webmvc:6.2.8"
    implementation "org.springframework:spring-tx:6.2.8"
    implementation "org.springframework:spring-jdbc:6.2.8"
    implementation "org.springframework:spring-test:6.2.8"

    // Jakarta EE
    implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    implementation 'jakarta.servlet.jsp:jakarta.servlet.jsp-api:3.1.1'
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:2.0.0'
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    // AOP/AspectJ
    implementation 'org.aspectj:aspectjrt:1.9.20'
    implementation 'org.aspectj:aspectjweaver:1.9.20'

    // Logging (Log4j2 & log4jdbc)
    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'
    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    // Jackson (JSON)
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'

    // Database (MySQL/HikariCP)
    implementation 'com.mysql:mysql-connector-j:8.4.0'
    implementation 'com.zaxxer:HikariCP:5.1.0'

    // MyBatis
    implementation 'org.mybatis:mybatis:3.5.15'
    implementation 'org.mybatis:mybatis-spring:3.0.3'

    // Pagination
    implementation 'com.github.pagehelper:pagehelper:5.3.2'

    // RabbitMQ (Spring AMQP)
    implementation "org.springframework.amqp:spring-amqp:3.1.2"
    implementation "org.springframework.amqp:spring-rabbit:3.1.2"

    // SnakeYAML (YAML 파싱)
    implementation 'org.yaml:snakeyaml:2.0'

    // test
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.2"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.10.2"

    // codef
    implementation 'io.codef.api:easycodef-java:1.0.6'

    // Firebase 메시징
    implementation 'com.google.firebase:firebase-admin:9.2.0'

    // 보안 (Spring Security 6.x)
    implementation "org.springframework.security:spring-security-web:6.2.3"
    implementation "org.springframework.security:spring-security-config:6.2.3"
    implementation "org.springframework.security:spring-security-core:6.2.3"
    implementation "org.springframework.security:spring-security-taglibs:6.2.3"

    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // 웹 소켓
    implementation "org.springframework:spring-websocket:6.2.8"
    implementation "org.springframework:spring-messaging:6.2.8"
    implementation "org.springframework.integration:spring-integration-stomp:5.5.20"

    // swagger (Springfox 사용 불가) → springdoc-openapi로 대체
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'

    // Redis
    implementation 'org.springframework.data:spring-data-redis:3.3.0'
    implementation 'redis.clients:jedis:4.4.3'
}
test {
    useJUnitPlatform()
}
